# aiokdb

./: LICENSE  README.md  check.sh  pyproject.toml  requirements.minimal.txt  requirements.txt
.github/workflows/: check.yml  code-quality.yml  publish.yml  python-package.yml
aiokdb/: __init__.py  adapter.py  cli.py  client.py  compress.py  context.py  enum.py  extras.py  files.py  format.py  server.py  socket.py
test/: test_atoms.py  test_client_server.py  test_context.py  test_decompress.py  test_file.py  test_format.py  test_rpc.py  test_serialization_examples.py  test_writer_connection_closed.py
