[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aiokdb"
version = "0.0.3"
authors = [
  { name="Chris Shucksmith", email="chris@shucksmith.co.uk" },
]
description = "Pure Python asyncio connector to KDB"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/TeaEngineering/aiokdb"
Issues = "https://github.com/TeaEngineering/aiokdb/issues"
