[build-system]
requires = ["setuptools>=64.0", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.ruff.lint]
extend-select = ["I"]

[tool.pytest.ini_options]
markers = [
    "asyncio",
]

[project]
name = "aiokdb"
authors = [
  { name="Chris Shucksmith", email="chris@shucksmith.co.uk" },
]
description = "Pure Python asyncio connector to KDB"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/TeaEngineering/aiokdb"
Issues = "https://github.com/TeaEngineering/aiokdb/issues"

